fix: different src for img

--- a/README.html
+++ b/README.html
@@ -71,7 +71,7 @@
 <h6 id="discord">discord</h6>
 <p><a href="https://cord.breadhub.cc">join the bread discord rn!!!</a></p>
 <h6 id="me">me</h6>
-<p><a href="https://codeberg.org/Expo"><img src="https://raw.githubusercontent.com/Exponential-Workload/Exponential-Workload/main/github-metrics.svg" alt=""></a></p>
+<p><a href="https://codeberg.org/Expo"><img src="https://gh.expo.moe/Exponential-Workload/github-metrics.svg" alt="metrics"></a></p>
 <blockquote>
 <p><strong>Warning</strong>
 I&#39;m under your bed.</p>
